Allow 802.11n hardware to support multi-rate retry when RTS/CTS is enabled.

The legacy (pre-802.11n) hardware doesn't support this - although
the AR5212 era hardware supports MRR, it doesn't have all the bits
needed to support MRR + RTS/CTS.  The AR5416 and later support
a packet duration and RTS/CTS flags per rate scenario, so we should
support it.

Tested:

* AR9280, STA

PR:		kern/170302

Former-commit-id: 5a994fb08777a71d971b0736bf1ce170497bea14